src/semantic/tests/data/negative/undeclared-variable-2.hsh
function ()
	if true then
		let x = 1
		x
	else
		x
	end
end
